<resources>
    <string name="app_name">AnPhat</string>
    <string name="error_msg_unknown">Đã xảy ra lỗi không mong muốn</string>
    <string name="error_msg_no_internet">Vui lòng kiểm tra kết nối và thử lại.</string>
    <string name="error_msg">Rất tiếc! không thể tải dữ liệu</string>
    <string name="title_error_msg">LỖI</string>
    <string name="title_info_msg">THÔNG TIN</string>
    <string name="title_vote_employee">Đánh giá nhân viên</string>

    <string name="dialog_btn_ok">ĐỒNG Ý</string>
    <string name="remember_pass">Lưu mật khẩu</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="pass_word">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="search">Tìm kiếm</string>
    <string name="filter">Bộ lọc</string>
    <string name="history_title">Lịch sử giao dịch</string>
    <string name="name_login">Họ tên</string>
    <string name="number_phone">Số điện thoại</string>
    <string name="code_pin">Mã pin</string>
    <string name="save_info">Lưu thông tin</string>
    <string name="forget_pass">Quên mật khẩu</string>
    <string name="input_id">Nhập ID</string>
    <string name="input_number_phone_to_check">Nhập số điện thoại để đăng kí hoặc đăng nhập</string>
    <string name="welcom_">An Phát xin chào</string>
    <string name="input_number_phone">Số điện thoại</string>
    <string name="create_new_customer">Tạo tài khoản mới</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_gas">GIÁ GAS MỚI NHẤT THÁNG 12 GIẢM MẠNH: - 24.000Đ/12KG</string>
    <string name="detail_gas">Lý giải giá gas tháng 12/2021 giảm, các công ty gas cho biết do giá gas thế giới tháng 12
        công bố 772.5 USD/tấn, giảm 77.5 USD/tấn so với tháng 11. Hiện giá gas trong nước phụ thuộc vào diễn biến thế giới
        do nguồn cung nội địa chỉ chủ động được khoảng 60% mức tiêu thụ.
        Giá gas trong nước giảm do giá gas thế giới điều chỉnh giảm.</string>
    //Product
    <string name="promotion">KHUYẾN MÃI</string>
    <string name="accessory">PHỤ KIỆN</string>
    <string name="kitchen">BẾP</string>
    <string name="fire_fighting">CHỮA CHÁY</string>
    <string name="bark">VỎ</string>
    <string name="vase_set">BỘ BÌNH</string>
    <string name="rice">GẠO</string>
    <string name="gas">GAS</string>
    <string name="paddy">LÚA</string>
    //google
    <string name="google_maps_key">AIzaSyBu86Xy64zcwMiKCLbsDbjPHQ9iG_5TBh0</string>
    <string name="no_result">Không tìm thấy kết quả</string>
    <string name="text_wait">Vui lòng chờ...</string>
    <string name="buy">Mua ngay</string>
    <string name="text_add_cart">Thêm vào giỏ hàng</string>
    <string name="title_empty_product">Sản phẩm hiện đang hết hàng</string>
    <string name="base_count">Tạm tính</string>
    <string name="cost_transport">Phí vận chuyển</string>
    <string name="total_money">Tổng tiền</string>
    <string name="text_order">Đặt hàng</string>
    <string name="cart">Giỏ hàng</string>
    <string name="nav_title_main">Trang chủ</string>
    <string name="nav_title_product">Sản phẩm</string>
    <string name="nav_title_sms">Tin nhắn</string>
    <string name="transaction">Giao dịch</string>
    <string name="account">Tài khoản</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="chat_title">Trò chuyện</string>
    <string name="vnd">đ</string>
    <string name="title_empty_cart">Giỏ hàng trống</string>
    <string name="noresult_msg">Không tìm thấy kết quả</string>
    <string name="information">Thông tin</string>
    <string name="title_otp">Nhập mã xác thực OTP</string>
    <string name="text_change_phone">Đổi số điện thoại</string>
    <string name="except">XÁC NHẬN</string>
    <string name="create_user_title">Tạo tài khoản</string>
    <string name="resend_otp">Gửi lại mã</string>
    <string name="hello">Xin Chào! </string>
    <string name="add_cart_success">Thêm vào giỏ hàng thành công!</string>
    <string name="url_ap">https://www.gasanphat.com</string>
    <string name="hotline">Hotline 0819000203</string>
    <string name="delivering">Đơn mua</string>
    <string name="history">Lịch sử</string>
    <string name="send">Gửi</string>
    <string name="title_button_vote">Đánh giá</string>
    <string name="title_booking_again">Đặt lại</string>
    <string name="status_start">DADAT</string>
    <string name="title_update">Cập nhật phần mềm</string>
    <string name="title_input_introduce">Nhập mã giới thiệu</string>
    <string name="pass_word_again">Nhập lại mật khẩu</string>
    <string name="error_booking">Đơn hàng này chưa hoàn thành nên chưa đánh giá được!</string>
    <string name="title_warning_location">Vui lòng bật chức năng xác định vị trí để có trải nghiệm tốt nhất!</string>
    <string name="error_cancel_booking">Nhập lí do hủy</string>
    <string name="title_pin">Mã pin của bạn là</string>
    <string name="error_dont_booking">Bạn cần hoàn tất đơn hàng trước đó!</string>
    <string name="infomation">Tin tức</string>
    <string name="title_no_booking">Bạn chưa có đơn hàng nào</string>
    <string name="title_add_presenter">Thêm người giới thiệu thành công</string>
    <string name="title_nav_report">Báo cáo</string>
    <string name="title_report_revenue">Báo cáo thu chi</string>
    <string name="report_title_reserve_fund">Báo cáo tồn quỹ</string>
    <string name="title_sales">Báo cáo doanh số</string>
    <string name="title_choose_employee">Chọn nhân viên</string>
    <string name="employee">Nhân viên</string>
    <string name="title_choose_category">Chọn loại hàng</string>
    <string name="title_category_detail">Loại hàng</string>
    <string name="warehouse">Kho</string>
    <string name="title_choose_warehouse">Chọn kho</string>
    <string name="from_date">Từ ngày</string>
    <string name="to_date">Đến ngày</string>
    <string name="choose_report">Chọn mẫu báo cáo</string>
    <string name="title_report_main">Chi tiết báo cáo</string>

    <string name="colNgay">Ngày</string>
    <string name="colSoCT">Số phiếu</string>
    <string name="colTenKhachHang">Tên khách hàng</string>
    <string name="colDiaChi">Địa chỉ</string>
    <string name="colDDBH">Nhân viên bán hàng</string>
    <string name="colTenKho">Kho</string>
    <string name="colDVT">ĐVT</string>
    <string name="colSoLuong">Số lượng</string>
    <string name="colDonGia">Đơn giá</string>
    <string name="colThanhTien">Thành tiền</string>
    <string name="colTongSoDong">Tổng số dòng</string>
    <string name="totalTongKhachHang">Tổng khách hàng</string>
    <string name="thongkecongno_edittext_hint_timkiem">Tìm kiếm khách hàng</string>
    <string name="colPhaiThu">Phải thu</string>
    <string name="colPhaiTra">Phải trả</string>
    <string name="colNhomKhachHang">Nhóm khách hàng</string>
    <string name="colMaKhachHang">Mã khách hàng</string>
    <string name="colDauKy">Đầu kỳ</string>
    <string name="colPSNhap">Nhập</string>
    <string name="colPSXuat">Xuất</string>
    <string name="colPSThu">Thu</string>
    <string name="colPSChi">Chi</string>
    <string name="colCuoiKy">Cuối kỳ</string>
    <string name="colNoCuoiKy">Nợ cuối kỳ</string>
    <string name="colSoPhieu">Số phiếu</string>
    <string name="colQuy">Quý</string>
    <string name="colLyDo">Lý do</string>
    <string name="colVeKhoan">Về khoản</string>
    <string name="colSoTien">Số tiền</string>
    <string name="colNguoiChiTien">Người chi tiền</string>
    <string name="colNguoiNhanTien">Người nhận tiền</string>
    <string name="totalTongSoDong">Tổng số dòng</string>
    <string name="category_title_main">Danh mục sản phẩm</string>
    <string name="save">Lưu</string>
    <string name="title_all_category">Tất cả danh mục</string>
    <string name="title_text_notification">Thông báo</string>
    <string name="accompanying_products">Sản phẩm kèm theo</string>
    <string name="title_add_card">Thêm vào giỏ hàng</string>
    <string name="error_un_known">Lỗi cơ sở dữ liệu xin báo người quản trị.</string>
    <string name="title_content">Nội dung</string>
    <string name="title_notification">Thông báo</string>
    <string name="title_address">Địa chỉ</string>
    <string name="title_text_all">Tất cả</string>
    <string name="title_text_no_view">Chưa xem</string>
    <string name="title_history_booking">Lịch sử đặt hàng</string>
    <string name="title_change_pass">Đổi mật khẩu</string>
    <string name="title_input_old_pass">Nhập mật khẩu cũ</string>
    <string name="title_input_new_pass">Nhập mật khẩu mới</string>
    <string name="title_input_new_pass_againt">Nhập lại mật khẩu mới</string>


    <string-array name="letter_tile_colors">
        <item>#f16364</item>
        <item>#67bf74</item>
        <item>#2093cd</item>
        <item>#696969</item>
        <item>#f58559</item>
        <item>#f9a43e</item>
        <item>#e4c62e</item>
        <item>#59a2be</item>
        <item>#ad62a7</item>
        <item>#8775B9</item>
        <item>#97E8C6</item>
        <item>#FFB57B</item>
        <item>#7ABFE7</item>
    </string-array>

</resources>