<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_main"
        android:title="@string/nav_title_main"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/navigation_pay"
        android:title="@string/transaction"
        android:icon="@drawable/ic_history"/>

    <item
        android:id="@+id/navigation_history"
        android:title="@string/infomation"
        android:icon="@drawable/ic_news"/>

    <item
        android:id="@+id/navigation_report"
        android:title="@string/nav_title_sms"
        android:icon="@drawable/ic_sms"/>

    <item
        android:id="@+id/navigation_account"
        android:title="@string/account"
        android:icon="@drawable/ic_user"/>

</menu>
