<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.checkphone.CheckPhoneActivity">

    <include
        android:id="@+id/layoutHeader"
        layout="@layout/layout_header"/>

    <TextView
        android:id="@+id/textMain"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_14"
        android:layout_width="match_parent"
        style="@style/AppTheme.TextViewSize20"
        android:layout_height="wrap_content"
        android:text="@string/welcom_"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@+id/layoutHeader"/>

    <TextView
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_14"
        android:layout_below="@+id/textMain"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_height="wrap_content"
        style="@style/AppTheme.TextView"
        android:text="@string/input_number_phone_to_check"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_14"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNumberPhone"
            android:fontFamily="@font/myriadpro_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_number_phone"
            android:inputType="number"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textCreateNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.TextView"
        android:text="@string/create_new_customer"
        android:layout_below="@+id/layoutInputEmail"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="@dimen/dp_14"
        android:gravity="end"/>


    <Button
        android:id="@+id/buttonLogin"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_14"
        android:text="@string/login" />

</RelativeLayout>