<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layoutHeader"
        layout="@layout/layout_header" />

    <TextView
        android:id="@+id/titleOtp"
        style="@style/AppTheme.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_below="@+id/layoutHeader"
        android:fontFamily="@font/myriadpro_bold"
        android:text="@string/title_otp" />

    <TextView
        android:id="@+id/textDetailOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.TextView"
        android:layout_below="@+id/titleOtp"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/Black"/>

    <com.tiha.anphat.utils.scroll.OtpEditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:layout_centerInParent="true"
        android:inputType="number"
        android:maxLength="4"
        android:text=""
        android:textIsSelectable="false"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textResendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp"
        android:gravity="end"
        android:padding="@dimen/dp_5"
        style="@style/AppTheme.TextView"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_below="@+id/etOtp" />

    <TextView
        android:id="@+id/textChangPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_change_phone"
        android:gravity="end"
        android:padding="@dimen/dp_5"
        android:layout_alignParentEnd="true"
        style="@style/AppTheme.TextView"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_below="@+id/etOtp" />

    <Button
        android:id="@+id/buttonEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button.Login"
        android:layout_alignParentBottom="true"
        android:text="@string/except"/>

</RelativeLayout>