<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.login.checkidpass.CheckLoginByIDPassActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_main"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_14"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textUserName"
            style="@style/AppTheme.TextViewSize20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myriadpro_bold" />

        <TextView
            android:id="@+id/textPhone"
            style="@style/AppTheme.TextViewSize16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_40"
            android:fontFamily="@font/myriadpro_bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_id"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_14"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_word"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textForgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                style="@style/AppTheme.TextView"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_10"
                android:enabled="false"
                android:text="@string/forget_pass"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textChangPhone"
                style="@style/AppTheme.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_5"
                android:gravity="end"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentEnd="true"
                android:text="@string/text_change_phone" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonLogin"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/login" />

</RelativeLayout>
