<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartActivity">

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="?actionBarSize">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_5"
            android:padding="@dimen/dp_10"
            android:src="@drawable/ic_arrow_back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textTitle"
            style="@style/AppTheme.TextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="@dimen/textSize_16"
            android:textColor="@color/White" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_order_main"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_10"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutMain"
        android:layout_below="@+id/layoutHeader">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rylCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layoutEnd"
            tools:listitem="@layout/item_cart" />

        <LinearLayout
            android:id="@+id/layoutEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_05"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/Black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5">

                <TextView
                    style="@style/AppTheme.TextViewSize16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/base_count" />

                <TextView
                    android:id="@+id/textCountTem"
                    style="@style/AppTheme.TextViewSize16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/dp_5"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5">

                <TextView
                    style="@style/AppTheme.TextViewSize16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_transport" />

                <TextView
                    style="@style/AppTheme.TextViewSize16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:text="0đ"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5">

                <TextView
                    style="@style/AppTheme.TextViewSize16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_money" />

                <TextView
                    android:id="@+id/textPriceFinal"
                    style="@style/AppTheme.TextView.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/dp_5"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <Button
                android:id="@+id/buttonOK"
                style="@style/AppTheme.Button.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_5"
                android:text="@string/text_order" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textNoItemCart"
        style="@style/AppTheme.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="@string/title_empty_cart"/>

</RelativeLayout>
